# GLP1_Berberine_Comparison

./: LICENSE  README.md  pyproject.toml
data/: berberine_vs_control_DEGs_with_human_symbols.csv  sra.sra.ERP070186.MD
output/: Berberine_vs_Control_DEGs_annotated.csv  GSEA_Downregulated_Curated_MSigDB.csv  GSEA_Downregulated_GO_MSigDB.csv  GSEA_Downregulated_Genes_MSigDB.csv  GSEA_Downregulated_Oncogenic_MSigDB.csv  GSEA_Upregulated_Curated_MSigDB.csv  GSEA_Upregulated_GO_MSigDB.csv  GSEA_Upregulated_Genes_MSigDB.csv  GSEA_Upregulated_Hallmark_MSigDB.csv  GSEA_Upregulated_Immunologic_MSigDB.csv  Overlapping_Downregulated_Genes.csv  Overlapping_Significant_Genes.csv  Overlapping_Upregulated_Genes.csv
scripts_python/: GLP1Analysis.py  README.md  berberineAnalysis.py  comparison_analysis.py
scripts_r/: GSEA_Analysis.R
